Fix a big bug\n\nGPU accelerated compositing may case index bug. -webkit-transform overwrites z-index ordering in chrome.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1226,7 +1226,7 @@ textarea{
 
 .clear-plexi{
   position: relative;
-  z-index: 1005;
+  z-index: 1005 !important;
 }
 .btn.btn-success:active {
   background-color: #CE655E;
